# mailing_management

./: .env_sample  pyproject.toml  readme.md
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: blog_tag.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
mailings/: cron.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
mailings/management/commands/: list_mailings.py  send_mailing.py
mailings/migrations/: 0001_initial.py  0002_remove_mailing_date_remove_mailing_time_and_more.py  0003_mailing_next_date_alter_mailing_period.py  0004_mailinglog_owner.py
mailings/templates/mailings/: base.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailinglog_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailings/templates/mailings/includes/: inc_navbar.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py
users/templates/users/: change_user_password.html  confirm_register.html  failed_register.html  login.html  password_changed.html  register.html  succeeded_register.html
