[tool.poetry]
name = "mailing-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mailing_management"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.7"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.22.1"
python-dotenv = "^1.0.1"
django-crontab = "^0.7.1"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
